--- a/ia/templates/refresh_20250708_224819.md
+++ b/ia/templates/refresh_20250708_224819.md
@@ -4,7 +4,7 @@ Estou desenvolvendo um projeto pessoal para controle financeiro. Se trata de um 
 
 🔍 OBJETIVO DA TAREFA:
 
-<<CHANGE_ME>>
+refresh - ao clicar no header, dar refresh no navegador
 
 📦 REQUISITOS TÉCNICOS:
 
